# ostap-browser

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddressBar.tsx  JarvisPanel.tsx  NewTabPage.tsx  Onboarding.tsx  Sidebar.tsx  TabContent.tsx  TabItem.tsx
src/hooks/: useTabs.ts
src/styles/: theme.ts
