[package]
name = "ostap-browser"
version = "0.1.0"
description = "A minimal web browser built with Tauri"
authors = ["Jarvis Maia"]
edition = "2021"

[lib]
name = "ostap_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
