[package]
name = "ostap-browser"
version = "0.1.0"
description = "A minimal web browser built with Tauri"
authors = ["Jarvis Maia"]
edition = "2021"

[lib]
name = "ostap_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
objc = "0.2"
objc2 = "0.6"
objc2-web-kit = { version = "0.3", features = ["WKWebViewConfiguration", "WKUserContentController", "WKUserScript", "WKPreferences"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-global-shortcut = "2"
